feat: add user info response DTO and new admin entity detail pages for amenities, rooms, and services
- Created UserInfoResponse DTO for user information handling.
- Implemented detail pages for amenities, amenity rooms, room types, and rooms in the admin section.
- Developed a reusable AdminEntityDetailPage component for managing entity details.
- Added a ConfirmDialog component for user confirmation actions.
- Created a ContactPage with a structured FAQ section and a call-to-action for customer support.