@@ -47,6 +47,9 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
             "/room/building/get",
             "/room/floor/.*",
             "/room/.*",
+            "/catalog/roomType.*",
+            "/catalog/amenity.*",
+            "/catalog/roomTypeService.*",
     };
 
     @Override
@@ -61,7 +64,7 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
         if (CollectionUtils.isEmpty(authHeader))
             return unauthenticated(exchange.getResponse());
 
-        String token = authHeader.getFirst().replace("Bearer ", "");
+        String token = authHeader.get(0).replace("Bearer ", "");
         log.info("Token: {}", token);
 
         return identityService.introspect(token).flatMap(introspectResponse -> {
